required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fixed build problem of PHP/Mapscript when php is compiled with gd as
  a shared extension (#3117)

- Improve safety of srcx/y checks in nearest neighbour raster resampler (#3120)

- Added support for 4d geometry types and oci bind variables for Oracle (#3107)

- Fixed WCS processing when both crs and response_crs are specified (#3083)

- Fixed msFreeMap causing memory corruption in msFreeOutputFormat (#3113)

- Fix WMC XML output when Dimension is used (#3110)

- Enable LOAD_WHOLE_IMAGE processing option by default when rendering
  WMS client layer images (#3111). 

- add default values for CGI %key% substitutions (#3108)

- fix clipping of polygon shapes in line layers (#3059)

- RFC 51 implementation: XML Mapfiles Format (#2872)

- Fix output for valid WCS 1.1 XML (#3086)

- Avoid double free with postgresql joins. (#2936)

- Don't attempt to project layers given in pixel coordinates (layer->transform != MS_TRUE) (#3096)

- Modify loading imagery from GDAL to load all bands at once to avoid multiple
  passes through pixel interleaved data (mapdrawgdal.c).  This is just an
  optimization - there should be no change in results or features.

- Modern GDALs clear the config when destroying driver manager.  Skip this
  call to avoid TLS leakage on cleanup (mapgdal.c).

- Fixed msMSSQL2008LayerGetShape to retrieve proper wkb geometries (#3082)

- Fixed the shape index for the inline layers (#3074)

- Fixed MINDISTANCE not considering label size on lines (#3050)

- Labeling enhancements: ability to repeat labels along a line/multiline (#3030)
