@@ -852,6 +852,27 @@ Web Object Metadata
 - *WMS TAG Name:* Title (WMS1.1.1, sect. 7.1.4.1)
 - *Description:* (Required) A human-readable name for this Layer.      
 
+**wms_rootlayer_title**
+
+- *WMS TAG Name:* Title (WMS1.1.1, sect. 7.1.4.1)
+- *Description:* (Optional) Same as wms_title, applied to the root Layer
+  element.
+  If not set, then wms_title will be used.
+
+**wms_rootlayer_abstract**
+
+- *WMS TAG Name:* Abstract (WMS1.1.1, sect. 7.1.4.2)
+- *Description:* (Optional) Same as wms_abstract, applied to the root Layer
+  element.
+  If not set, then wms_abstract will be used.
+
+**wms_rootlayer_keywordlist**
+
+- *WMS TAG Name:* KeywordList (WMS1.1.1, sect. 7.1.4.2)
+- *Description:* (Optional) Same as wms_keywordlist, applied to the root Layer
+  element.
+  If not set, then wms_keywordlist will be used.
+
 Layer Object Metadata
 ---------------------
 
