@@ -116,7 +116,12 @@ Content-type: application/vnd.ogc.wms_xml
   <UserDefinedSymbolization SupportSLD="1" UserLayer="0" UserStyle="1" RemoteWFS="0"/>
   <Layer>
     <Name>WMS_TEST</Name>
-    <Title>Test simple wms</Title>
+    <Title>My Layers</Title>
+    <Abstract>These are my layers</Abstract>
+    <KeywordList>
+     <Keyword>layers</Keyword>
+     <Keyword>list</Keyword>
+    </KeywordList>
     <SRS>EPSG:42304</SRS>
     <SRS>EPSG:42101</SRS>
     <SRS>EPSG:4269</SRS>
